--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="banner">
         <div class="bannerText">
           <h1>Everyone can own a house.</h1>
-          <h1 style="font-size: 3.5rem"><em>Only with </em>Berumah</h1>
+          <h1><em>Only with </em>Berumah</h1>
           <p>
             Find comfort in the house with us, want to find a home? we are ready
             to help you wholeheartedly based on what you need
@@ -46,7 +46,7 @@
           <img
             src="./image/PHOTO-2025-07-01-19-35-11-removebg-preview.png"
             alt="banner"
-          />
+           />
         </div>
       </div>
     </header>
@@ -54,25 +54,25 @@
     <main>
       <section>
         <div class="infoTab genLayout">
-          <h6>🏠 house</h6>
-          <h6>🏠 apartment</h6>
+          <h6><i class="fa fa-home" aria-hidden="true"></i> House</h6>
+          <h6><i class="fa fa-building-o" aria-hidden="true"></i> Apartment</h6>
         </div>
         <div class="addressInfo genLayout">
           <div class="bottomInfoTabs">
             <div class="tabCard">
-              <h4>location</h4>
-              <h5>📌 los angeles, califonia</h5>
+              <h4>Location</h4>
+              <h5><i class="fa fa-map-marker" aria-hidden="true"></i> Los Angeles, California</h5>
             </div>
             <div class="tabCard">
-              <h4>type</h4>
-              <h5>📌 minimalist</h5>
+              <h4>Type</h4>
+              <h5><i class="fa fa-home" aria-hidden="true"></i> Minimalist</h5>
             </div>
             <div class="tabCard">
-              <h4>price</h4>
-              <h5>$10.000 -$100.000</h5>
+              <h4>Price</h4>
+              <h5><span><i class="fa fa-usd" aria-hidden="true" style="font-size: 15px;"></i></span></i> $10.000 -$100.000</h5>
             </div>
             <div class="tabCard">
-              <button>search</button>
+              <button>Search</button>
             </div>
           </div>
         </div>
